--- a/app/views/psd-file-upload/refresh2.html
+++ b/app/views/psd-file-upload/refresh2.html
@@ -455,8 +455,8 @@
             </strong>
           </div>
 
-          <a href="/psd-file-upload/refresh#images" class="govuk-button govuk-button--secondary opss-button-refresh">
-            Refresh the image
+          <a href="/psd-file-upload/refresh#images" class="govuk-button govuk-button--secondary opss-button-refresh" role="button">
+            Refresh the image <span class="govuk-visually-hidden">image name here</span> 
           </a>
 
           <!--button class="govuk-button govuk-button--secondary opss-button-refresh">
