--- a/app/views/psd-revised-flow/case-opss-landing__enquiry.html
+++ b/app/views/psd-revised-flow/case-opss-landing__enquiry.html
@@ -232,7 +232,7 @@
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+                    Unsafe
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
