--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -67,7 +67,14 @@
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-different-team.html" target="_blank">Case page - visitor</a>
-                <br><span class="govuk-!-font-size-16">Different team viewing the case without owning the case or having been invited</span>.
+                <br><span class="govuk-!-font-size-16">Different team viewing the case without owning the case or having been invited. Click 'Products' ...</span>.
+
+                <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-2-products-no-owner.html" target="_blank">Case page - visitor - products tab</a>
+                        <br><span class="govuk-!-font-size-16">When viewing someone else's case, and included products are owned, they do not feature links to the owner</span>.
+                    </li>
+                </ul>
             </li>            
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing_warnings.html" target="_blank">Case page - warning</a>
@@ -145,7 +152,7 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-added" target="_blank">
                     Case - product page - product was added 
                 </a>
-                <br><span class="govuk-!-font-size-16">Confirmaiton the the product record was added</span>.
+                <br><span class="govuk-!-font-size-16">Confirmation the the product record was added</span>.
             </li>                                                
                        
         </ul>  
@@ -155,16 +162,32 @@
 
         <h2 class="govuk-heading-s">Product pages</h2>
 
+        <p class="govuk-body-s">"Constituent names" names to be revised.</p>
+
         <ol class="govuk-list govuk-list--number govuk-list--spaced">
             <li>
-                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page" target="_blank">Product page - owned</a>
-                <br><span class="govuk-!-font-size-16">The user owns this product record</span>.
-            </li>
-            <!--li>
-                <a class="govuk-link govuk-link--no-visited-state" href="#########" target="_blank">Product page - inactive</a>
-                <br><span class="govuk-!-font-size-16">Product record without an owner</span>.
-            </li-->           
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page" target="_blank">Product page - owned by my team</a>
+                <br><span class="govuk-!-font-size-16">My team owns this product record (and we have at least one case linked to it)</span>.
 
+                <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page-no-owner" target="_blank">Product page - not owned (but is included in any of my team's cases)</a>
+                        <br><span class="govuk-!-font-size-16">No team owns the product record but my team have an open case linked to it</span>.
+                    </li>
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page-no-owner-not-included" target="_blank">Product page - not owned (and not included in any of my team's cases)</a>
+                        <br><span class="govuk-!-font-size-16">No team owns the product record and my team do not have a case linked to it</span>.
+                    </li>                    
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page-owned-by-others" target="_blank">Product page - owned elsewhere</a>
+                        <br><span class="govuk-!-font-size-16">A different team owns the product record</span>.
+                    </li>                        
+                </ul>
+            </li>
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-page-edit" target="_blank">Edit the product</a>
+                <br><span class="govuk-!-font-size-16">Tech debt: old page with 3x details/fields removed and some non-editable fields</span>.                
+            </li>
         </ol>
 
     </div>
@@ -245,7 +268,7 @@
                     
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-2-products.html" target="_blank">Trading Standards - Products x2 page</a> Showing two products linked to the one case. The text and missing edit link for a product record owned by another team and a product record without an owner.
+                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-2-products.html" target="_blank">Trading Standards - Products x2 page</a> Showing two products included in the one case. The text and missing edit link for a product record owned by another team and a product record without an owner.
                         </li>
                     </ul>
                 </li>
