--- a/app/views/psd-revised-flow/contact-prod-owner.html
+++ b/app/views/psd-revised-flow/contact-prod-owner.html
@@ -1,13 +1,13 @@
 {% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
-    Email the product record owner
+    Product record owner contact information
 {% endblock %}
 
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "products"
+        href: "products-2-products"
     }) }}
 {% endblock %}
 
@@ -17,64 +17,65 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
+            Contact the product record owner
+        </h1>
+
+        <p class="govuk-body-s opss-secondary-text govuk-!-margin-bottom-8">
+            You can contact the product record owner with editorial requests, amendments, or additional information or general enquiries.
+        </p>
         
-        <form action="/psd-revised-flow/contact-prod-owner-sent" method="post" novalidate>
-
-            <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="2000">
-                <div class="govuk-form-group govuk-!-margin-bottom-5">
-                    <!--span class="govuk-caption-l">Product record: psd-304 </span-->
-                    <h1 class="govuk-label-wrapper">
-                        <label class="govuk-label govuk-label--l govuk-!-margin-bottom-2" for="description">
-                            Email the product record owner
-                        </label>
-                    </h1>
-
-                    <div id="description-hint" class="govuk-hint">
-                        The email message will automatically include the product name, the <abbr>psd</abbr>-[.] reference number and a hyperlink to the product record page.
-                    </div>
-
-                    <details class="govuk-details govuk-!-margin-bottom-7 opss-details--sm" data-module="govuk-details">
-                        <summary class="govuk-details__summary">
-                            <span class="govuk-details__summary-text">
-                                Help with emailing the product record owner
-                            </span>
-                        </summary>
-                        <div class="govuk-details__text">
-                            <p class="govuk-body-s">
-                                You can send an email message to advise the product record owner of additional product information or corrections. (Product titles, product categories and subcategories are not editable). 
-                            </p>
-                            <p class="govuk-body-s">
-                                You will automatically receive a Blind carbon copy (<abbr>Bcc</abbr>) email.
-                            </p>                            
-                            <p class="govuk-body-s">
-                                You can attached a file to the email message.
-                            </p>
-                        </div>
-                    </details>                    
-
-                    <textarea class="govuk-textarea govuk-js-character-count" id="description" name="description" rows="7" aria-describedby="description-info description-hint"></textarea>
-
-                    <div id="description-info" class="govuk-hint govuk-character-count__message govuk-!-font-size-16" aria-live="polite">
-                        You can enter up to 2000 characters
-                    </div>
-
-                </div>
+        <dl class="govuk-summary-list">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    Product record
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    <abbr>psd</abbr>-304
+                </dd>
+                </div>                        
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                Record owner
+                </dt>
+                <dd class="govuk-summary-list__value">
+                Sunderland Trading Standards Service
+                </dd>
             </div>
-
-            <div class="govuk-form-group">
-                <label class="govuk-label" for="file-upload">
-                    Attach a file to your email message
-                </label>
-                <input class="govuk-file-upload" id="file-upload" name="file-upload" type="file">
-            </div>                
-
-            <div class="govuk-form-group">
-                <button class="govuk-button" data-module="govuk-button">
-                    Send
-                </button>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                Record created by
+                </dt>
+                <dd class="govuk-summary-list__value">
+                Sarah Smith
+                </dd>
             </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                Address
+                </dt>
+                <dd class="govuk-summary-list__value">
+                15 Humber Street<br>Sunderland<br>SU23 4DX
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                Contact details
+                </dt>
+                <dd class="govuk-summary-list__value">
+                <p class="govuk-body"><span class="govuk-visually-hidden">Telephone: </span>07700 900457</p>
+                <p class="govuk-body">
 
-        </form>
+                    <span class="govuk-visually-hidden">Email: </span>
+
+                    <a href="mailto:tsosunderland@sunderlandcounciltso.org.uk?subject=PSD%20product%20record%20(psd-304)" class="govuk-link govuk-link--no-visited-state">
+                        tsosunderland@sunderlandcounciltso.org.uk
+                    </a>
+
+                </p>
+                </dd>
+            </div>
+        </dl>                    
 
     </div>
 </div>  
