--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -5,7 +5,7 @@
             Products
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">The product records which are linked to this case.</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">The product records included in this case.</p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
@@ -68,7 +68,7 @@
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
-        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The Product(s) linked to this case</h2>
+        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The Product(s) included in this case</h2>
 
         <section>
 
@@ -547,7 +547,7 @@
                     </dl>
                     
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        You can email the <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record owner</a> with editorial requests,<br class="opss-br-desktop"> amendments, or additional information.
+                        You can contact the <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record owner</a> with editorial requests,<br class="opss-br-desktop"> amendments, or additional information<span class="opss-hidden-desktop">.</span>
                     </p>
               
                 </div>
