--- a/app/views/psd-revised-flow/inc_products_pg_content_no_owner.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_no_owner.html
@@ -5,13 +5,11 @@
             Products
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product records included in the case.</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">The product records included in this case.</p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="/psd-revised-flow/add-a-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                Add a product to the case
-            </a>
+
         </div>
     </div>
 
@@ -26,11 +24,26 @@
             Skip to the main content
         </a>
 
+
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
-                    Case
+                <a href="#" class="govuk-link govuk-link--no-visited-state">
+                    My cases
                 </a>
+            </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Team cases</a>
+            </li>
+            <li>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
+            </li>
+        </ul>
+
+        <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-1 govuk-!-margin-bottom-6 govuk-!-margin-right-6">           
+
+        <ul class="govuk-list opss-left-nav">
+            <li>
+                <a href="/psd-revised-flow/case-trading-stds-landing-different-team.html" class="govuk-link govuk-link--no-visited-state">Case</a>
             </li>
             <li class="opss-left-nav__active">
                 <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products <span>(1)</span></a>
@@ -44,16 +57,16 @@
                 </ul>
             </li>
             <li>
-                <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
             </li>
         </ul>
     </nav>
@@ -70,9 +83,7 @@
                 </div>
                 <div class="govuk-grid-column-one-quarter">
                     <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                        <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                            Edit this <span class="govuk-visually-hidden">Asda dishwashing liquid </span>product
-                        </a>
+                        <!-- no edit link -->
                     </div>
                 </div>
             </div>
@@ -92,13 +103,11 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
-                                Your team is the product record owner
+                                
+                                    Cardiff Trading Standards Services
+                                
                             </dd>
-                            <!--dd class="govuk-summary-list__actions">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                                    Contact<span class="govuk-visually-hidden"> the product's record owner</span>
-                                </a>
-                            </dd-->
+
                         </div>
                     </dl>  
 
@@ -108,7 +117,6 @@
                     <figure class="opss-margin-bottom-1-desktop">
                         <img src="../public/images/dishwashing-liquid.jpg" class="opss-details-img opss-details-img--thumbnail opss-float-right-desktop" alt="Lorem ipsum etite">
                         <figcaption class="govuk-visually-hidden">Image title here</figcaption>
-                        <!--figcaption class="opss-img-caption opss-text-align-right opss-float-right-desktop opss-margin-bottom-1-desktop">Lorem ipsum etite ett</figcaption-->
                     </figure>
 
                 </div>
@@ -120,26 +128,26 @@
                 </h3>
                 
                 <ul class="govuk-tabs__list">
-                  <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-                    <a class="govuk-tabs__tab" href="#product-tab-1">
-                      Details
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#images-tab-1">
-                      Images <span class="govuk-!-font-size-16">(3)</span>
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#attachments-tab-1">
-                      Attachments <span class="govuk-!-font-size-16">(2)</span>
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#cases-tab-1">
-                      Cases <span class="govuk-!-font-size-16">(4)</span>
-                    </a>
-                  </li>
+                    <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+                      <a class="govuk-tabs__tab" href="#product-tab-1">
+                        Details
+                      </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                      <a class="govuk-tabs__tab" href="#images-tab-1">
+                        Images <span class="govuk-!-font-size-16">(3)</span>
+                      </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                      <a class="govuk-tabs__tab" href="#attachments-tab-1">
+                        Attachments <span class="govuk-!-font-size-16">(2)</span>
+                      </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                      <a class="govuk-tabs__tab" href="#cases-tab-1">
+                        Cases <span class="govuk-!-font-size-16">(4)</span>
+                      </a>
+                    </li>
                 </ul>
 
                 <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-1">
@@ -157,40 +165,40 @@
                                     <span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> reference for this product record
                                 </span>
                             </dd>
-                        </div>                        
+                        </div>
 
-                        <!-- if and 3 have a value .... start -->
-                        <div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Constituent names
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                <dl class="opss-nested-definition-list">
-                                    <div>
-                                        <dt>Manufacturer's brand name</dt>
-                                        <dd>Asda</dd>
-                                    </div>
-                                    <div>
-                                        <dt>Product brand name</dt>
-                                        <dd>Small ball </dd>   
-                                    </div>
-                                    <div>
-                                        <dt>Model name</dt>
-                                        <dd>Animal 2</dd> 
-                                    </div>
-                                </dl>
-                            </dd>
-                        </div> 
-                        <!-- if and 3 have a value .... end -->
-                        
-                        <!--div class="govuk-summary-list__row">
-                            <dt class="govuk-summary-list__key">
-                                Brand
-                            </dt>
-                            <dd class="govuk-summary-list__value">
-                                Asda
-                            </dd>
-                        </div-->                        
+                            <!-- if and 3 have a value .... start -->
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Constituent names
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    <dl class="opss-nested-definition-list">
+                                        <div>
+                                            <dt>Manufacturer's brand name</dt>
+                                            <dd>Asda</dd>
+                                        </div>
+                                        <div>
+                                            <dt>Product brand name</dt>
+                                            <dd>Lorem ipsum</dd>   
+                                        </div>
+                                        <div>
+                                            <dt>Model name</dt>
+                                            <dd>Clean dishes</dd> 
+                                        </div>
+                                    </dl>
+                                </dd>
+                            </div> 
+                            <!-- if and 3 have a value .... end -->
+    
+                            <!--div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">
+                                    Brand
+                                </dt>
+                                <dd class="govuk-summary-list__value">
+                                    Asda
+                                </dd>
+                            </div-->          
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
@@ -269,15 +277,15 @@
                             <dd class="govuk-summary-list__value">
                                 Unknown
                             </dd>
-                        </div> 
+                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Model or product number
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                334176-01
+                                
                             </dd>
-                        </div>                          
+                        </div>                           
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key opss-border-none">
                                 Other product identifiers
@@ -288,20 +296,18 @@
                         </div>
                     </dl>
                     
-                    <!-- only show this next line if the user is the product owner (or same team) -->
-                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page</a>
-                    </p>
+                    <!-- no statement about contacting the product owner -->
               
                 </div>
 
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
-                  
+
                     <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
+                  
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page <span class="govuk-visually-hidden">to access its images</span></a>
+                        You cannot edit these images, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its images</span></a><br class="opss-br-desktop"> with additional product information or corrections 
                     </p>
               
                 </div>
@@ -310,27 +316,23 @@
                     <h4 class="govuk-heading-m">Product attachments</h4>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304</span> product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
+                        You cannot edit these attachments, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its attachments</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
                     </p>                  
               
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
+                    
                     <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is included in these cases.</p>
-
               
                 </div>
             </div>
 
             <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                <a href="/psd-revised-flow/remove-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
-                    Remove this <span class="govuk-visually-hidden">Asda dishwashing liquid </span>product <span class="govuk-visually-hidden">from the case</span>
-                </a>
-            </div>  
+
+            </div>             
     
         </section>
-
-        <!-- HR here followed by next section for next product - see, producgts-2-products.html -->
 
     </section>
 </div>
