--- a/app/views/psd-revised-flow/product-page-no-owner-not-included.html
+++ b/app/views/psd-revised-flow/product-page-no-owner-not-included.html
@@ -26,9 +26,9 @@
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="/psd-revised-flow/product-page-edit.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <!--a href="/psd-revised-flow/product-page-edit.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Edit the product record
-            </a>                           
+            </a-->                           
         </div>
     </div>
 </div>              
@@ -115,18 +115,7 @@
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">Product record owner</dt>
                         <dd class="govuk-summary-list__value">
-                            Your team is the product record owner
-
-                            <!-- 
-                                alt texts:
-                                
-                                1. Your team is the product record owner
-                                2. No owner
-                                3. <a href="contact-prod-owner" class="govuk-link govuk-link--no-visited-state">Cardiff trading standards service</a>
-
-
-                                footers: No owner = "By editing this product record your team will become the owner of this product record"
-                            -->
+                            No owner
                         </dd>
                     </div>
                 </dl>  
@@ -373,8 +362,9 @@
               </div>
             </div>
           </div>
+          
 
-          <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">This product record is owned by your team<span class="opss-hidden-desktop">.</span><br class="opss-br-desktop"> You can <a href="/psd-revised-flow/product-page-edit.html" class="govuk-link govuk-link--no-visited-state">edit the product details</a><span class="opss-hidden-desktop">.</span></p>          
+          <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">This product record has no owner<span class="opss-hidden-desktop">.</span></p>
 
 
     </section>
