--- a/app/views/psd-revised-flow/is-this-the-product-owned.html
+++ b/app/views/psd-revised-flow/is-this-the-product-owned.html
@@ -94,9 +94,7 @@
                                 <div class="govuk-details__text"><img src="../public/images/asda-window-cleaner.png" class="opss-details-img" alt="Asda window cleaner"></div>
                             </details>
 
-                            <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                                This product record currently has no owner. Your team will become the owner<span class="govuk-visually-hidden">.</span>
-                            </p>
+                            <!-- no owned by statement -->
 
                         </div>  
                     </section>
