--- a/app/views/psd-revised-flow/add-a-product.html
+++ b/app/views/psd-revised-flow/add-a-product.html
@@ -41,10 +41,10 @@
                 </summary>
                 <div class="govuk-details__text">
                     <p class="govuk-body-s">
-                        Use the Products area to find a product and its product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> <!--You can search for products within the <abbr>PSD</abbr> product records using the <a href="#" class="govuk-link govuk-link--no-visited-state" target="blank"><span class="opss-no-wrap">Products search page</span> (opens in new tab)</a>. -->Using an existing <abbr>PSD</abbr> product record to add to your case avoids the need to create a new one and highlights other cases investigating the same product.
+                        Use the <a href="/products/your-products" class="govuk-link govuk-link--no-visited-state">Products area</a> to find a product and its product record reference number. <span class="govuk-!-margin-right-1">For example, <i><abbr>psd</abbr>-301</i>.</span> Using an existing <abbr>PSD</abbr> product record to add to your case avoids the need to create a new one and highlights other cases investigating the same product.
                     </p>
                     <p class="govuk-body-s">
-                        After checking that the product does not already exist within the <abbr>PSD</abbr> product records, you can add a new product record to the database (using the links provided in the Products area pages).
+                        After checking that the product does not already exist within the <abbr>PSD</abbr> product records, you can create a new product record (using the links provided in the Products area pages) and then use its <abbr>PSD</abbr> reference number to add it to your case.
                     </p>
                 </div>
             </details>
